--- a/package.json
+++ b/package.json
@@ -30,6 +30,5 @@
         "normalize.css": "^8.0.1",
         "youtube-player": "^5.5.2"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
